# vork_area

./: .index  20240808184924.md  MesonNinja.md  README.md  RespectIsNeverDemandedItsEarned.md  kernel_rust-vs-c_prog_lang_and_developers_and_environments.md  tithi_devis_devatas.md
2025/: AI-to-AC.md  ARM_TrustedBoardBoot.md  CMake.md  GODOMOPO_TODO.md  GoodProgrammingHabits.md  Kubernetes_cert.md  OperationalThinking.md  Youtube_revenue.md  c++_namespace.md  c++_smart_pointers.md  company_registration_in_tw.md  copilot_codeQuality.md  dump_app_fonts_on_console.md  gerrit_karyalayam_code_flow.txt  git_merging_two_branches.md  git_reflog.md  mdbook_mathjax.md  mdbook_tutorial.md  neoVim_lsp_warnings_fix.md  nvim_tricks.typ  record_15min_clips.sh  rust_blockchain_crypto.typ
2025/Docker/: 01.1_ContextSwitching.md  01.6_HowLinuxSupportsContainerization.md  ToC.md  podman.md  tools_utils.md
2025/Electronics/: logicAnalyzer.md
2025/FFmpeg/: AVCodec.md  AVCodecContext.md  AVFormat.md  AVFormatContext.md  AVFrame.md  (+7 more)
2025/Finance/trading_platform/twse_py/: Cargo.toml
2025/Finance/trading_platform/twse_py/src/: lib.rs
2025/MemAccessDetails/01-Mem-Access-Basics-LAB-Rust/memory_access_basics_rust/: Cargo.toml
2025/MemAccessDetails/01-Mem-Access-Basics-LAB-Rust/memory_access_basics_rust/src/: lab2_stack_heap.rs  lab3_mmio.rs  lab4_cache.rs  lab5_alignment.rs  lab6_struct_padding.rs
2025/Rust/Aya/tmp/test_aya/: Cargo.toml  README.md
2025/Rust/Aya/tmp/test_aya/test_aya/: Cargo.toml  build.rs
2025/Rust/Aya/tmp/test_aya/test_aya-common/: Cargo.toml
2025/Rust/Aya/tmp/test_aya/test_aya-ebpf/: Cargo.toml
2025/Rust/Aya/tmp/test_aya/test_aya-ebpf/src/: main.rs
2025/Rust/Aya/tmp/test_aya/test_aya/src/: main.rs
2025/Rust/Aya/tmp/test_bind/test_bind-ebpf/: Cargo.toml
2025/Rust/Aya/tmp/test_bind/test_bind-ebpf/src/: main.rs
2026/: CCA.md  TodoTsmc.md.gpg  Viveka-Dharma.md  high-performance-networking-with-xdp.md  rust_beginner_senior.md  todo_tsmc.md
Finance/: 1.md  1.md.gpg  CPIAUVal.md  Physical_delivery.md  Tether-au.md.gpg  Usefull_Views.md  contango.py  deepseek.md  ersion  fiat_ponzi.md  kingkong9888EricYe_ung.md  mutual_fund.md  revaluation.md
ImageProcesing/: pixels.md
Linux/: .index  Namespace.md  Vlc_pi_fork.md  eBPF.md
Security/: Urls.md
ToDo/: Office-browser-Urls.md  git_tips.md  todo_list.txt
WFH/: .index
YOM/: Markdown_linux_editor_preview.md  RoadMap2LinearAlgebra.md  latex_in_markdown.md  roadmap_servo.md
bookmarks/: .index
config_files/: .index  alacritty.toml  bashrc  starship.toml
devTools/: MesonNinja.md  repo.md
misc/: todo_2025.md  trust_confidence_idx.md
programs/: demo_init_dist_mtx_inStructs.c
rust/: .index  01-cargo.md  02-rustup.md  Ownership.md  Rust_C_lib.md  Rust_Compilation.md  learning_rust_Along_withCC++.md
tools/: .index  file_encrypt_decrypt.md  note-taking-solution.md  productive_tools_list.md
transcoding/: BitstreamFrag_PTSCont_Sync_ffmpeg_gstreamer.md  OMX_Mynotes.md  PI5_Decoding_Encoding.md  omx.c
(+492 files in other folders)
