[package]
name = "twse_py"
version = "0.1.0"
edition = "2024"

[lib]
name = "twse_py" 
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

