[workspace]
resolver = "2"
members = [
    "test_aya",
    "test_aya-common",
    "test_aya-ebpf",
]
default-members = ["test_aya", "test_aya-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1.0.98", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.41", default-features = false, features = ["std"] }
env_logger = { version = "0.11.8", default-features = false }
libc = { version = "0.2.174", default-features = false }
log = { version = "0.4.27", default-features = false }
tokio = { version = "1.46.1", default-features = false }
which = { version = "6.0.3", default-features = false }

[profile.release.package.test_aya-ebpf]
debug = 2
codegen-units = 1
